@@ -1,3 +1,8 @@
+2001-07-02  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* Resolve.cc: update SRV support for RFC2782.
+	* HttpDir.cc: add roxen listing support; reorganize.
+
 2001-06-30  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* url.cc: use host=localhost for urls like file:///path.
